--- a/_posts/winners/biz_lecture/2023-08/2023-08-05-유니크한-암웨이-비즈니스-성공철학-(김민기 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-05-유니크한-암웨이-비즈니스-성공철학-(김민기 리더).md
@@ -1,25 +1,81 @@
 ---
-title:  "아무리 봐도 암웨이만 한 일은 없다! : 김정훈 리더" 
+title:  "유니크한 암웨이 비즈니스 성공철학 : 김민기 리더" 
 
 categories:
   -  Winners
 tags:
-  - [Amway, Winners, STP]
+  - [Amway, Winners]
 
 toc: true
 toc_sticky: true
 
-date: 2023-08-04
-last_modified_at: 2023-08-04
-video_file : assets/amway/video/2023-08-04-아무리봐도-암웨이만한-일은-없다-(김정훈 리더).mp4
+date: 2023-08-05
+last_modified_at: 2023-08-16
 ---
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/llJ8Sm2F-p4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-<video width="90%" muted autoplay controls>
-    <source src="{{ page.video_file | relative_url }}" type="video/mp4">
-</video>
+## 유니크한 암웨이 비즈니스 성공철학 / 김민기 리더 (8/5)
+
++ 쿠팡
+  - 엄청난 손해를 보고 있는 기업인데, 왜 기업가치는 100조가 넘는가?
+  - 쿠팡 물류 : AI가 판단하여 물류창고에 물건을 배치함
+  - 쇼핑몰 사업을 뛰어넘어 '물류회사'로 바라 봄
+
++ 우리가 보는 암웨이 사업은 무엇인가?
+  - 단순 쇼핑몰인가?
+  - 비지니스 본질의 가치가 다르다
+  - 다른 비지니스 모델과 다름
+
+### How To STP
++ 사람들은 왜 Amway 사업을 하지 않을까?
+  1. 제대로 된 설명을 들어본 적이 없다.
+    - 얘기를 해서는 암웨이를 제대로 전달 할 수 없다
+    - 얘기? = 주제를 똑같이 인식 됐을 때 가능하다
+    - "어? 내가 생각한 것과 다른데?"라는 반응 유도
+  2. 현실점검이 제대로 되지 않았다.
+    - '더 나은 삶'에 대한 고민
+    - "내가 지금 어디 있는가?"에 대한 좌표인식
+  3. 다양한 고정관념을 가지고 있다.
+    - '암웨이'를 전하면서 상대방에 대한 고정관념.
+    - 사업을 하고 있는 우리들의 '생각'이 중요하다
+    - 타인의 생각에 대해서 고민하기 보다, 우리 자신의 생각을 굳건히 갖는 것이 중요
+    - 그들에게 다른 모습을 보여줌으로써 그들의 생각이 바뀔 수 있는 계기가 되도록
+  4. 자신감이 없다.
+    - 계속 키워나가야하는 숙제
+    - 누구에게나 두려움은 있을 수 있으나, 어떻게 받아들이느냐에 따라 다름
+    - 부정적이거나 위축되지 않도록 노력
+    - 운동을 통해 자신감을 극복하는 습관
+    - 상대방으로 인해 자신감이 위축되는 것이 아니라, 자신에 대한 자신감이 위축되는 것이 크다
+    - 자신의 몸과 마음이 달라지면 자신감은 키워질 수 있다
+  5. 더 이상 큰 꿈을 꾸지 않는다.
+    - 소확행 : 작지만 확실한 행복
+    - 이미 갖은 사람들에게 있어서의 '소확행'이지, 가지지 못한 우리들에게는 맞는 않는 말이다.
 
 
-## 아무리 봐도 암웨이만 한 일은 없다! / 김정훈 리더 (8/4)
++ 사람들은 왜 Amway 사업을 어렵게 느낄까?
+  - 진정한 고생을 해보지 않은 사람들의 이야기
+  - 쉬운 것만이 우리를 행복하게 만드는 것은 아니다.
+  - 어려운 것을 이겨냄으로써 이루는 것으로 행복을 느낌
+  1. 삶의 목적 (사업의 목적)을 분명히 정하지 않았다
+    - 내가 '어떤 삶을 살겠다'는 목표가 없기 때문
+  2. 주도적이고 지속적인 학습을 하지 않는다.
+    - 실수를 통해 배운다는 것을 알지 못한다
+    - 밖에서는 실수를 하지 않도록 노력하는 것이 다반사
+    - 암웨이는 반대로 실수를 통해서 성장(학습)하는 사업
+    - 처음부터 깨지는(?) 사람이 성공한다
+    - 정답을 찾지말고, 암웨이를 통해 정답을 찾는다
+  3. 분명한 목표가 없다.
+    - 목표가 있을 때, 긴장감과 성취감이 생기고 가속도가 붙는다
+    - '누가 가속도, 모멘텀을 만드느냐?'에 따라 달렸다
+  4. 계산없는 순수하고 자발적인 노력이 부족하다
+    - 시간, 거리, 비용을 따지지 않는다.
+    - 내 소비가 경험이 되고, 자신이 되어 사업을 키우는 길
+  5. 시스템속에서 변화를 받아들이지 않는다.
+    - 수줍음 -> 자신감 / 높은 사람 -> 낮아지는 경험
+    - '고민'이 있다면 잘 하고 있는 것!
+    - '몰입'... 지속적으로 몰입의 횟수를 높여라!
+    - 목표를 정하고 계속 하다보면 '몰입'의 순간이 온다
+    - 지속적인 '몰입의 경험'을 축적하는 것이 중요하다
 
-+ 
++ 꾸준한 시행착오가 성공의 데이터다!
