--- a/_posts/winners/biz_lecture/2023-08/2023-08-07-골든타임-성장전략-(손재모 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-07-골든타임-성장전략-(손재모 리더).md
@@ -10,11 +10,98 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-05
-last_modified_at: 2023-08-07
+last_modified_at: 2023-08-16
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/v5GUGNERfKU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+
 ## 골든타임 성장전략 / 손재모 리더 (8/7)
 
-+ 
++ 1년 사업
+  - 암웨이는 9월부터 회계년도 시작
+  - 6,7,8월이 골든타임
+
++ 올해 하반기와 내년 회계연도 비즈니스를 어떻게 ***준비***해야 할까요?
+  - 3월부터 하기를 추천한다
+  - 하지만 6월부터라도 3개월을 준비하는 것도 중요하다
+
++ You can do it in TA
+  - 푸꾸옥 : 베트남 여행 보너스
+  - 지중해 쿠루즈와 푸꾸옥 도전
+  - 여행에 포커스를 맞춰라
+
++ PF24을 준비하는 지금이 바로 성장의 골든 타임입니다.
+  - 지속적인 성장을 위해 반드시 필요한 브론즈빌더
+  - 푸꾸옥을 위해 최소 PT!
+  - 브론즈빌더 구조를 가지고 F.PT를 준비하라
+
++ FY2024 성장 시나리오
+  1. 첫번째
+    - 6/7/8 - 브론즈 파운데이션 : 3레그 확보
+    - 9/10/11 - 브론즈 빌더 : 각 레그별로 브론즈 파운데이션 만들기
+    - 12 ~ 8월까지 SP 도전하여 PT 만들기
+    - 성공확률은 50% : 내가 마음을 먹느냐 마느냐에 따라 다름
+  2. 두번째
+    - 6/7/8 - 브론즈 빌더
+    - 9 ~ 8월까지 SP 도전하여 F.PT 만들기
+  3. 세번째
+    - 9 ~ 8월까지 SP 도전하여 F.EMR
+    - 내년 DIA 도전
+  + 골든타임을 통해 내년 목표를 설정하라!
+  + 계획과 목표를 세워 궁리하라
+
++ 시간 = 돈
+  - 돈을 투자하는 것 처럼 시간을 투자하라
+  - 우리는 시간을 투자해서 돈을 벌어라
+  - 시간을 투자할 마음을 먹어라
+
++ 골든타임 성장에 필요한 자세
+  - 보이는 것을 바꾸려면 보이지 않는 것을 먼저 바꿔야 한다
+  - 마음 그릇을 키워야 된다
+  - 우리가 감당할 그릇을 키워야 성장한다
+  1. 단호한 목표
+    - 그냥 목표가 아니라, 단호한 목표
+    - 결과목표뿐 아니라, 행동목표도 함께
+    - 단호한 목표는 영감과 serendipity(예상치못한 성공,행운)의 원천
+    - 다이아몬드룰 향한 STP 100회 도전
+  2. 올바른 집중
+    - 단호한 목표를 통해 생긴, 영감을 활용
+    - 생각난 일을 계속 해 나가는 것
+    - 새는 생각, 새는 행동, 새는 시간, 새는 에너지 막기
+      - 쓸데없는 감정소모 줄이기
+      - "모든 것은 내 잘못이다"
+      - 내 마음을 괴롭히는 일을 막아라
+    - 그래서 바빠짐 / 가속도
+      - 게으름을 멀리하라
+      - 목표 O : 영감 / 목표 X : 잠념
+    - 토끼와 거북이
+      - 실제 실험에서 거북이가 이긴다
+      - 거북이는 집중해서 가야할 길을 간다.
+      - 효율보다 효과에 집중하라
+  3. Keep going
+    - 하다보면 잘 안될 수 있다. 그래도 계속하라
+    - 중꺽마(중간에 꺽이지 않는 마음) / 제일 중요
+      - 현재-----------> 성공(핀업)
+      - 잘 되든 안 되든 앞으로 가야한다
+      - "시간에 비해 되어야만 한다는 생각"을 버려라
+      - 실제 성공은 '실패와 성공'의 연속으로 성취한다
+
++ 성공하는 사람 vs 평범한 사람
+  - Life vs Life Style (반대로 산다)
+  - 평범한 사람 : Job -> Income -> Life
+  - 성공하는 사람 : Life Style -> Income -> Job
+
++ 핀업하는 사람 vs 핀업 못하는 사람
+  - 핀업 못하는 사람 : Pin -> Income -> Life
+  - 핀업하는 사람 : Life Style -> Income -> Pin
+  - 결국 꿈과 목표의 차이가 핀의 차이를 만든다.
+
++ 우리가 우리의 한계를 깨버릴 때 가능하다
+  - 내가 갖고 있는 벽을 무너뜨려야 한다
+  - 반복과 연습을 통해 가능하다
+  - 적당히 원하면 변명을, 간절히 원하면 방법을 찾습니다.
+  - 어렵다, 힘들다, 타고난 재능이 없다. 두렵다. 돈이 없다. 멘탈이 약하다 등등 등장하는 변명의 종류는 늘 한결 같다
+  - 하지만, 이런 변명 또한 해결하려 하면 모두 방법이 있다
+  - 그 방법을 찾아보려고 하는 노력조차 안ㅇ한다면 새로운 변명만 더 생길 것이다.
+  - 지혜로운 사람은 행동으로 말을 증명하고, 어리석은 사람은 말로 행위를 변명한다.
