--- a/_posts/winners/biz_lecture/2023-08/2023-08-09-OSR게스트-(이창선 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-09-OSR게스트-(이창선 리더).md
@@ -17,6 +17,85 @@ audio_file : assets/amway/audio/2023-08-09-OSR게스트-(이창선 리더).mp3
 
 <audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
 
+
+
 ## OSR게스트 / 이창선 리더 (8/9)
 
-+ 
++ 꿈
+  - 서로에게 꿈을 묻다
+  - 직장 생활하면서 다시 생각하게 됨
+  - 좋은 딸, 평생 직장 = 꿈
+
++ 미팅
+  - 미팅을 통해서, "내가 막연하게 살고 있구나"를 알게 됨
+  - '계속 준비하라'라는 말 속에서 준비하지 못한 현실점검
+
++ 암웨이 사업을 한다?
+  - '나' 라는 사람에 대해서 점검이 되어 있어야 한다.
+  - 단순히 '좋아한다'로는 안된다. 앞으로 어떻게 살아갈까를 고민하는 사람이어야 함
+  - 수단이 필요함을 인지하고, 암웨이가 수단으로 들어올 수 있다.
+
++ 초고령화 사회
+  - 고령화가 심하게 진행된 대한민국
+  - 과거 미팅에서 들었던 내용이 현실이 되어 버림
+  - 지금 듣는 미팅에서의 내용이 미래에 현실이 될 것
+  - 진단, 예방 의학으로 인해 긴 수명
+
++ 암웨이 사업
+  - 전달할 때, 추상적인 단어로 설명하고 있는 나를 발견
+  - 막연하고 모호한 암웨이 설명에 대한 변화를 느낌
+  - 자신은 없었지만, 무엇을 어떻게 하라는 것인지는 알게 됨
+
++ 10Core
+  - 행동을 하니, 현실과 꿈에 대한 거리가 느껴짐
+  - 사람들이 그만두는 이유가 이 거리에 있다는 것을 알게 됨
+  - 내 현실에서 나아가고자 하는 '목표'가 생김
+    1. 꿈을 접는다
+      - 행복하지 않다는 느낌
+      - 못났다는 느낌으로 불행을 느낌
+      - 그냥 꿈을 접고 포기해버린다
+    2. 거리를 줄인다
+      - 내 현실을 올리겠다고 노력하는 사람
+      - 암웨이는 이 거리를 줄이는 방법을 알려준다
+      - 10Core
+  - 10Core는 자기 후원 (PT되기 전까지)
+    - 나한테 수단이 필요하다는 것은 알게 되었으나, 불안과 두려움
+    - "하다보면 나아지겠지" 생각으로 버팀
+    - 자기 후원이 되어야 비즈니스가 쌓인다
+  - PT 이후 자기 수련
+    - 왜 해야하는지 깨닫게 됨
+    - 네트워크의 변화보다 내가 더 많이 변화하는 과정을 알게 됨
+  - 사업의 열심의 기준은 '10Core'
+
++ 안전한 재태크 암웨이
+  - 지출이 커진 요즘 세상
+  - 지금은 수입원을 더 늘려야 한다
+  - 지출을 컨트롤 할 수 있는게 별로 없다
+  - 지출을 줄일 수 있는 방법? -> 마트를 바꾸는 방법
+  - 마트를 암웨이로 바꿔서 재태크 할 수 있다
+
++ 지속적인 수입
+  - LG생활건강 vs 암웨이 치약
+    - 암웨이 치약으로 바꿀 때야만 내 매출로 바꿀 수 있다
+  - 계속적인 생필품의 지출로 우리의 돈이 새어나간다
+  - 누구나 ABO가 되면 자기의 지출이 자기의 수입이 될 수 있다
+  - 당신의 지출을 당신의 매출로 바꿔준다
+  - 끊임없이 나가는 지출을 내 매출로 바꿀 수 있도록 개념을 바꾸면 된다
+
++ 암웨이가 주는 보상
+  1. 경제적인 보상
+    - 14일 마다 주는 캐시백
+    - 지속적인 수입을 키워나가는 일
+    - 10Core를 통해 바꿀 수 있다
+    - 지속적인 소득을 지금부터 만들어놔야 한다
+  2. 정신적인 보상
+    - 기업가 정신
+    - 직장인들 : 쉬는 날 계산
+    - 직장인들은 '도전', '성취', '목표'라는 단어를 쓰지 않는다
+    - 문제가 생기면, '어떻게 해결할까?'라는 시선으로 보게 됨
+    - 지금 이세대를 살아가는데 중요한 것은 '기업가 정신'
+  3. 여행 보상
+    - 안해도 되는 노력... 누군가에게 힘들때, 암웨이가 여행을 통해 보상
+    - 그동안의 고생을 여행으로 보상
+    - 노력에 대한 인정해주는 암웨이
+    - 황송한 대접으로 자존감을 채워주는 암웨이 여행 보상
