--- a/_posts/winners/biz_lecture/2023-08/2023-08-15-Crown-사업설명-(심화영리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-15-Crown-사업설명-(심화영리더).md
@@ -1,5 +1,5 @@
 ---
-title:  "Croen 사업설명 : 심화영 리더" 
+title:  "Crown 사업설명 : 심화영 리더" 
 
 categories:
   -  Winners
@@ -16,6 +16,6 @@ last_modified_at: 2023-08-16
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bnuZv1XhF8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
-## Croen 사업설명 / 심화영 리더 (8/15)
+## Crown 사업설명 / 심화영 리더 (8/15)
 
 + 
