--- a/_posts/winners/biz_lecture/2023-08/2023-08-10-내 삶을 디자인하다-(이소연 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-10-내 삶을 디자인하다-(이소연 리더).md
@@ -10,11 +10,102 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-10
-last_modified_at: 2023-08-16
+last_modified_at: 2023-08-17
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gs_V9gHVhvc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-## 내 삶을 디자인하다 / 이소연 리더 (8/10)
 
-+ 
+
+## 내 삶을 디자인하다 / 이소연 리더 (8/10)
+### 부제 : Share The Plan
+
++ 암웨이 첫 만남
+  - 아이의 건강과 나의 건강으로 만나게 됨
+
++ 제품을 디자인했다
+  - 유명한 제품들을 디자인 했지만, 로열티는 없다
+  - 회사만을 위한 일
+  - "언제가는 일을 그만둘수 밖에 없다"고 느낌
+
++ 5060
+  - 돈을 버는 시간이 줄어듦
+  - 수명은 길어져 돈을 쓰는 시간이 길어짐
+  - 미래를 위해 준비하지 않으면 안됨
+
++ 빈부 차이란? '삶의 충격을 흡수'하는 능력의 차이다.
+
++ 원하는 삶
+  - 마음껏 지원해주고 싶은 삶
+
++ 수입의 방식
+  - 임시수입/노동수입
+    - 내가 돈을 위해 일한다
+  - 인세자산/권리수입
+    - 시스템이 끊임없는 수입을 창출한다
+
++ 암웨이사업
+  - 나의 성장을 믿지 않으면 이룰 수 없다.
+  - 주변에서 제대로 알지 못하는 사람들이 반대 했으나, 정확한 경험과 공부를 통해 비전을 보았다
+  - 정확한 정보와 먼저 한 사람들의 경험.... 소수의 경험을 믿고 진행
+  - "나의 인생은 나의 것, 그 누구의 것도 아니다"
+  - 그 답은 '생필품'에 있다
+
++ 소비자의 상생
+  - 좋은 제품으로 누구에게나 기회가 되었으면 하는 마음
+  - 매출로 기회가 될 수 있다
+  - 생필품을 바꿔쓰면 기회가 된다
+  - 중간 유통의 마진을 없애고, 제품의 질을 높여, 소비자에게 캐시백
+  - 캐시백 35%는 큰 영역으로 기회가 된다
+  - 소비가 기회가 됨을 알아야 한다
+
++ Company
+  - 친환경으로 시작한 기업 = 암웨이
+  - 에디슨 마케팅상 : 누구나 부자가 될 수 있는 공정한 마케팅
+  - 100여개 국가로 법인이 설립되어 있음
+  - 사라지는 글로벌 회사가 많지만, 이념을 통해 굳건하게 자리잡고 있다
+  - 삼성 글로벌 연구원 : 암웨이의 가능성,「초연결시대 최고의 비즈니스」
+  - 제품을 써보고 다른 이들에게 전달 -> 사업
+  - "평생사업" / "해외여행" / "상속"
+
++ Product
+  1. 뉴트리라이트
+    - 유기농 농장 보유
+    - 아이들이 뉴트리라이트로 건강한 모습을 발견하고 체험함
+  2. 아티스트리
+    - 유기농 농법으로 키워낸 식물로 만든 건강한 화장품
+  3. 이스프링
+    - 정수기를 통해 건강한 아이들을 출산
+    - 탯줄을 보면 뱃속에서 어떻게 영양소를 흡수했는지 알 수 있다
+    - 영양소와 물의 위력을 경험하게 됨
+  4. 새티니크 스캘프 뉴트리션 레이저 L400
+    - 탈모에 탁월한 효과를 보이는 제품
+  5. 25센트 라이드
+    - 실내 자전거를 통해 건강함을 유지
+  6. 퀸 (주방용품)
+  7. 원포원
+    - 까다로운 공장의 품질테스트
+    - 라면은 초벌 기름으로 튀겨서 깨끗함
+
++ Plan
+  - 각자 소비 20만점(3%)를 통해, '나'는 36,000원을 받을 수 있음
+  - 지금은 작지만, 10년뒤 물가상승률을 반영하면 적지 않은 돈
+  - 브론즈빌더만 되더라도 좋은 추가수입이 될 수 있다
+  - 제품이 제품을 소개하여 전달될 수 있는 구조
+  - 배우고 써보는 사람들이 모이는 것 = 네트워크
+  - 복제를 통한 성장
+    - 복제를 통해 하위 네트워크 안에서 성장이 이뤄질 수 있다
+  - 내가 원하는 수입은 내가 정한다
+
++ 우리는 피카소가 되어야 한다.
+  - 남들이 반대해도 본인이 하고 싶은 일을 해내는 일
+
++ 눈을 감을 때
+  - 나와 내가족의 생계만
+  - 나눔을 하는 삶(선한부자)
+  - 부자를 만들어주는 삶 (더불어 사는 선한부자)
+
++ 암웨이를 통해 얻는 자유
+  1. 경제적 자유
+  2. 시간적 자유
+  3. 만나의 자유
