--- a/_posts/winners/biz_lecture/2023-08/2023-08-11-디지털-노마드보다-매력적인-암웨이-정착민-( 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-11-디지털-노마드보다-매력적인-암웨이-정착민-( 리더).md
@@ -10,15 +10,95 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-11
-last_modified_at: 2023-08-16
+last_modified_at: 2023-08-17
 ---
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PdixyZDvnmw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
+
 ## 디지털 노마드보다 매력적인 암웨이 정착민 (8/11)
 ### 부제 : 디지털 노마드의 치명적인 단점과 비교되는 암웨이 사업의 특징 3가지
 ### 부제 : 이제는 암웨이에 정착해도 되는 이유 / 암웨이 사업설명
 
-+ 
+
+### 디지털 노마드
++ 디지털 노마드
+  - Digital + Nomad(유목민)
+  - 인터넷 접속을 전제로, 디지털 기기를 이용한 시간이나 공간이나 제약을 받지 않는 생활방식
+  - 프리랜서 형태의 재택/원격근무를 하면서 자유롭게 생활하는 사람들
+  - 본인의 창조물을 가지고 있는 경우가 많음
+  - 유튜버
+    - 전세계를 돌아다니며 촬영하며 일을 함
+  - 카페
+    - 카페에서 노트북을 통해 일을 하고 있는 사람들
+
++ 아날로그 노마드
+  - 예술가 백남준
+  - 산악인 엄홍길
+
++ 사물인터넷의 대중화
+  - 스마트폰, 사물 인터넷 등의 발전으로 재택근무 활성화
+  - 더 확산되고 있는 디지털 노마드의 생활 방식
+  - 코로나로 인해 디지털 노마드가 보편화가 되기 시작
+  - 앞으로 크게 증가할 것으로 예상되고 있음
+
++ 추가소득
+  - 전업이 아닌 투잡/쓰리잡으로 많이 하고 있음
+  - 방법들이 무수하게 생겨나고 있다
+
++ 장점
+  1. 시간과 공간에서의 자유
+    - 업무를 언제 시작하고 언제 끝낼지 혼자 결정할 수 있음
+  2. 인간관계로 읺나 스트레스가 적음
+    - 직장인의 스트레스 근본 원인
+  3. 정년이 없는 일
+    - 회사나 공무원이 정년이 있는 반면, 소속되지 않고 능력을 통해 돈을 벌기 때문에 정년이 없다
+  4. 직장인보다 많은 수입을 벌 수 있는 일
+    - 회사에서는 정해진 급여밖에 받을 수 없으나, 어떻게+능력으로 수입을 정할 수 있음
+
++ 단점
+  1. 불안정한 수익
+    - "경우의 따라 많은 돈"... 굉장한 소수에 불과하다
+    - 유튜브 시작 후 7-80%가 1년 안에 그만둠
+  2. 언제 어디서든, 일이 있다면 해내야 함
+    - 시공간의 제약이 오히려 단점이 될 수 있음
+    - 일이 생기면 어디에 가든지 일을 해야하는 묶이는 상황 발생
+  3. 일과 삶의 균형이 고도로 조직화되어야 한다
+    - 시스템을 스스로 만들고, 벗어나지 않도록 노력해야 한다
+    - 워라벨은 다른 세상 얘기
+  4. 디지털 기기나 인터넷 등에 익숙하지 않으면 사실상 불가능
+    - 높은 확률로 불가능 함
+    - 무엇보다 능력이 중시되는 시장인 디지털 노마드
+    - 디지털 기기를 잘 다루는건 기본 중에 기본
+
++ 생각해보기
+  - 해볼만한 가치는 있지만, 불안함
+
++ 안정성과 지속성
+  - 가장 본질적이고 치명적인 단점
+
++ 단점의 원인
+  - 너무나 빨리 변화하는 플래폼 시장의 정책들
+  - '안정성'과 '지속성'이 불안한 생태계
+  - 논란으로 인한 은퇴.
+  - 많은 변수들로 인해 실패
+
+
+### 암웨이
++ 정착인이되고, 디지털 노마드의 장점만 취하는 일?
+  - 바로 암웨이 비즈니스
+  - 엄청난 기술이나 돈이 있어야 하는 일이 아님
+  - 효율성/안정성/지속성에 대한 안전
+  - 가장 안정적인 일이 암웨이 비즈니스
+
++ 암웨이 비즈니스 오해
+  1. 시간과 공간의 제약?
+    - 암웨이를 한다고 해서 직장을 그만두지 않음
+    - 직장생활을 하면서 부업으로 할 수 있는 일
+    - 현재 본인의 상황에 맞게 실천할 수 있는 일
+    - 원하는 시공간에서 할 수 있는 일
+    - 시간과 공간의 제약이 있는 상황에서도 그 생산성을 높일 수 있는 일
+    - 이미 100여개 글로벌 진출을 이뤄낸 그룹
+    
