--- a/_posts/winners/biz_lecture/2023-08/2023-08-17-원데이-(윤주리 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-17-원데이-(윤주리 리더).md
@@ -1,5 +1,5 @@
 ---
-title:  "N&B : 오경아 리더" 
+title:  "원데이 : 윤주리 리더" 
 
 categories:
   -  Winners
@@ -9,14 +9,14 @@ tags:
 toc: true
 toc_sticky: true
 
-date: 2023-08-15
-last_modified_at: 2023-08-16
+date: 2023-08-17
+last_modified_at: 2023-08-17
 
-audio_file : assets/amway/audio/2023-08-15-N&B-(오경아 리더).mp3
+audio_file : assets/amway/audio/2023-08-17-원데이-(윤주리 리더).mp3
 ---
 
 <audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
 
-## N&B / 오경아 리더 (8/15)
+## 원데이 / 윤주리 리더 (8/17)
 
 + 
