--- a/_posts/winners/biz_lecture/2023-08/2023-08-11-디지털-노마드보다-매력적인-암웨이-정착민-( 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-11-디지털-노마드보다-매력적인-암웨이-정착민-( 리더).md
@@ -100,5 +100,30 @@ last_modified_at: 2023-08-17
     - 현재 본인의 상황에 맞게 실천할 수 있는 일
     - 원하는 시공간에서 할 수 있는 일
     - 시간과 공간의 제약이 있는 상황에서도 그 생산성을 높일 수 있는 일
-    - 이미 100여개 글로벌 진출을 이뤄낸 그룹
+    - 이미 100여개 글로벌 진출을 이뤄낸 글로벌그룹
+    - '나는 시간이 없어'
+      - "시간관리라는 환성에서 벗어나라"
+      - "시간이 없다는 말은 모통 무언가를 하지 못하거나 할 수 없을 때, 당위성 부여.."
+      - "시간은 단지 절약하는 것이 아니라 미래에 꿈꾸는 장면들을 위해 지금 당장 해야하는 일...우선순위"
+
+  2. 본인의 능력이 필요한 일?
+    - 모두가 다른 배경 다른 환경, 때문에 다른 능력을 가진 사람들
+    - 특별한 능력을 요구하지 않는다.
+    - '성공의 시스템'이 있는 암웨이 비즈니스
+    - 노하우를 따라가는 것이지, 창조하는 화려한 사업은 아니다
+    - 나 혼자가 아닌 팀과 함께 시스템을 하는 일
+  
+  3. 안정성과 지속성
+    - "전략은 변하지 않는 것에 토대를 두어야 한다. 세상이 어떻게 변하더라도 고객이 원하는 가치를 제공한다면 고객은 외면하지 않는다." -제프 베조스
+    - "그 동안 변하지 않았던 것은 무엇일까?"
+      - 단순한 생필품으로!
+        1. 누구나 사용한다
+        2. 반복해서 사용해야 한다
+        3. 죽을 떄 까지 사용해야 한다
+    - 하우스홀드 골드 : "모든 가정 속에는 '생필품'이라는 금맥이 흐른다. 이 비용을 이용하여서 우리는 경제적 자유를 달성할 수 있다"
+    - 생필품이 기본인 사업으로, 큰 자본을 드리지 않아도 성공 할 수 있는 사업
+    - 생필품을 기반으로 하는 사업. 암웨이 비즈니스
+    - 생필품이기 때문에 안정성과 지속성이 확보되는 사업
     
+
+
