--- a/_posts/winners/biz_lecture/2023-08/2023-08-12-비전과-가치-(손재모 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-12-비전과-가치-(손재모 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-12
-last_modified_at: 2023-08-17
+last_modified_at: 2023-08-18
 video_file1 : assets/amway/video/2023-08-12-비전과-가치-(손재모 리더)-1부.mp4
 video_file2 : assets/amway/video/2023-08-12-비전과-가치-(손재모 리더)-2부.mp4
 ---
@@ -25,7 +25,76 @@ video_file2 : assets/amway/video/2023-08-12-비전과-가치-(손재모 리더)-
 </video>
 
 
+
 ## 비전과 가치 / 손재모 리더 (8/12)
+### 부제 : 더 나은 삶을 위한 기회
 
++ 암웨이 만남
+  - PC방 사장님을 통해 처음으로 알아보게된 암웨이
+  - 처음엔 부정적이었지만, 책 2권을 통해 비전을 보게 됨
+  - 대학교 시절에 에매랄드 성취
+  - 암웨이를 만나 인생의 통제권을 내가 갖게 됨
 
-+ 
++ 코로나 팬데믹 그 후 3년
+  - 세상의 변화가 너무 빨라졌다
+  - 항상 변화가 심각할때... 기회는 있다
+
++ 변화와 기회
+  - 누군가는 절망하지만 그 속에서 기회를 갖는다
+
++ 부의이동 / 노동가치감소 / 양극화가속
+  - 노동/점포 -> 로봇과 AI
+  - 챗GPT - 생성형 인공지능
+  - 초예측 - 무용계급의 탄생
+  - 전기차 발전이 불러오는 나비효과
+
++ 위기(危:위험 / 機:기회)
+  - 코로나 때문에 관심을 갖게 되었기 때문에 우리에겐 기회다
+  - 경제 관념에 대한 전환이 필요하다
+  - 우리의 수입원과 경제활동에 대한 관점의 전환이 필요
+  - "잠자는 동안에서 돈이 들어오는 구조..."
+
++ 미래 준비에 대한 재정의
+  - 자신의 생활비 이상이 연금성/자산성 소득으로 나오게 만들기
+  - 층층이 노후를 준비하는 안전한 자산을 만들어라
+  - 그 중에 하나로 암웨이를 알아보라
+
++ 암웨이의 원리
+  - 생필품을 살 때... 중간마진이 많다
+  - 64년 전, 중간 마진을 없애고 원가를 높인 기업이 암웨이
+  - 합리적 가격으로 만족품질 보증제로 판매
+  - 최고의 홍보대사, 고객이 전하게 만듦
+  - 자랑해서 각자 직거래하는 방식
+  - 생산자와 소비자를 연결한다 : 암웨이
+  - 암웨이 핵심 : 소비경험 + 공유 + 연결
+
++ What is Amway?
+  - 소비를 통한 경험을 공유하고 연결해서 수입을 창출하는 개인 플랫폼 비즈니스
+
++ 회사소개
+  - 미국 53위 기업
+  - 사람 중심의 창업정신
+  - 750만평의 뉴트리라이트 유기농 농장
+  - 400여가지의 암웨이 제품
+  - 한국경제와 함께 성장하는 한국 암웨이
+  - Helping people live better lives
+  - 환경을 생가하는 제품
+  - 환경헌장 : "인간과 자연과 환경에 해가 되는 제품은 만들지도 유통하지도 않겠다."
+
++ 시장 자본주의 원리
+  - 누군가의 소비는 누군가의 소득이 된다.
+
++ 사업의 기회
+  - 코인처럼 벌수 있는 암웨이
+  - 하지만 불안한 코인보다 안정적인 보장 PV
+  - 여행의 보상
+
++ 삶을 바꾸려면 올바른 도구를 선택하고, 집중과 몰입을 통한 완성의 시간이 필요
+
++ "세상 모든 사람들에게는 무한한 잠재력이 있다. 그럼에도 불구하고 원하는 삶을 살지 못하는 이유는 기회를 만나지 못했거나, 스스로 믿지 못하기 때문이다."
+
++ 한계를 뛰어넘지 못하는 '벼룩'
+  - 한계를 뛰어넘으려면?
+  - 새로운 벼룩을 같이 두면 뛰어넘는다
+  - 남이 하면... 나도 한다
+  
