--- a/_posts/winners/biz_lecture/2023-08/2023-08-15-Crown-사업설명-(심화영리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-15-Crown-사업설명-(심화영리더).md
@@ -18,4 +18,104 @@ last_modified_at: 2023-08-17
 
 ## Crown 사업설명 / 심화영 리더 (8/15)
 
-+ 
++ 삶에 대한 현실점검
+  - 내 삶의 좌표가 어디에 있는가?
+  - '가난'(poverty)
+    - 가장 쉬운 되물림 : '가난'
+    - 가난이란?
+      - 기본적인 '물질의 결핍'
+      - '기회'의 결여
+      - 미래에 대한 가능성을 깨닫지 못하는 '내적 결핍'
+  - 암웨이를 만나고 가난한 습관을 벗어나게 되었다
+
++ CHOICE
+  - 우리는 늘 선택을 한다
+  - 올바른 선택을 위해서는 '올바른 안목'이 필요하다
+  - 선택에 대한 책임을 지는 것은 우리 자신
+
++ 내 인생 5년 후
+  - 지금부터 5년 후의 내 모습은 두 가지에 의해 결정된다.
+  - 지금 읽고 있는 '책'과 요즘 시간을 함께 보내는 '사람'들이 누구 인가 하는 것
+
++ 앞으로의 미래는?
+  1. 평생직장의 붕괴
+    - 평생 다닐 수 있는 직장은 없다
+  2. 고령화
+    - 적어도 100세까지 살아야 한다
+    - 50년에 대한 은퇴준비가 되어야 한다
+  3. 부의 양극화
+    - 부자와 가난한자
+    - 중산층이 없어진다
+    - 상대적 빈곤감이 나를 초라하게 만든다
+  - 20년 이내 현재 직업의 47%가 사라질 것
+  - 현재에만 안주하면 미래를 볼 수 없다
+
++ 본질(本質)
+  - 본디부터 가지고 있는 사물 자체의 성질이나 모습
+  - 사물이나 현상을 성립시키는 근본적인 성질
+
++ Amway = 슈퍼
+  - 생필품사야하는 곳
+  - 암웨이 슈퍼를 사용했고, 나만 사용하지 않았다 : 끝!
+
++ 암웨이 플랜
+  - 2~5년 플랜
+  - 부업 : 현재 하고 있는 일을 하면서 남는 시간을 이용한 사업
+  - 무자본 : 돈을 들이지 않고 해야하는 사업
+  - 무점포
+  - 무경험
+  - 남는 시간을 이용하요 슈퍼를 쓰고, 슈퍼를 가르쳐주는 일
+  - 매달 / 증가 / 평생 / 상속
+  - 연금성 소득을 쟁취하는 일
+
++ 암웨이에 대한 편견
+  - 누군가 이용하는 것 같아서
+  - 파는 거 못해서
+  - 다단계라서
+  - 아는 사람이 없어
+  - 돈이 안되서
+  - 말을 잘 못해서
+
++ 나는 왜 암웨이를 하는가?
+  - 17년 사업을 하면서 편견을 제대로 보게 됨
+  - 암웨이는 '물건을 파는 일'이 아님.
+  - 초인류 다국적 기업인 암웨이에 대한 제대로된 학습을 통해 다른 이들에게 전하는 일
+  - 세계판매 1위이고 좋은 품질의 제품을 안쓸 이유가 있을까?
+  - 편견에 사로잡히면 제대로 볼 수 없다
+  - 퍼즐을 맞춰나가면 안할 이유가 없다
+  - 정확하게 암웨이를 알아보고 선택하라
+
++ CHOICE
+  1. No!!
+  2. 물건만 쓰는 소비자
+  3. 부업
+  4. 비지니스
+  - 단 암웨이를 정확하게 알아본 후에 결정하라
+
++ DREAMS
+  - 꿈을 이루기 위해서는 '도전', '인내', '근면', '성실', '열정'이 필요하다
+  - 돈을 벌기 위해서는 '도전', '인내', '근면', '성실', '열정'이 필요하다
+  - 꿈 = 돈
+  - 꿈과 돈의 속성이 동일하다
+  - 욕심이 없다? 꿈이 없다? 열정이 없다?... 꿈이 곧 돈은 아니지만, 꿈을 이뤄내기 위해서는 동일한 성분이 필요하다
+
++ 마음사용설명서
+  - 고통은 10개월 무이자 할부를 활용하고
+  - 감동은 일시불로 구입하세요
+  - 감사는 밑반찬처럼 항상 차려놓고
+  - 슬픔은 최대한 소식하세요
+  - 이해는 뜨거운 찌개먹듯 천천히,
+  - 용서는 동치미 먹듯 시원하게 섭취하세요
+  - 기쁨은 인심좋은 국밥집 아주머니처럼 차리고,
+  - 상처는 계란처럼 잘 풀어주세요
+  - 오해는 잘게 다져 이해와 버무리고,
+  - 실수는 굳이 넣지 않아도 되는 통깨처럼 다뤄주세요
+  - 고통은 편식하고
+  - 행복은 가끔 과식을 권장합니다.
+  - 은혜는 대출이자처럼 꼬박꼬박 상환하고,
+  - 열정은 신용대출을 권장합니다.
+  - 우정은 연금처럼 납입하고,
+  - 그리움은 끝끝내 해지하지 마세요
+  - 행복은 언제든 입출금이 가능한 통장에 넣어두세요
+
++ 도전하라, 거친숨소리에 열정을 담아
