--- a/_posts/winners/biz_lecture/2023-08/2023-08-14-STP-(홍승희 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-14-STP-(홍승희 리더).md
@@ -10,12 +10,89 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-14
-last_modified_at: 2023-08-17
+last_modified_at: 2023-08-18
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aldHz44AhwE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## STP (Show The Plan) / 홍승희 리더 (8/14)
+### 부제 : New Business Opportunity
 
-+ 
++ 플라스틱 차이나(Plastic China)
+  - 쓰레기 산에서 먹고 자고 일하며 사는 11살 소녀 '이제'와 가족들
+  - 중국이 최대의 쓰레기 수입국이었다가, 나라에서 금지
+  - 고용된 건 아버지이지만, 온 가족이 그 쓰레기 더미 속에서 일합니다.
+
++ 의성 쓰레기산
+  - 4만㎡ 크기, 축구경기장 2배가 넘는 면적에, 20만 톤의 쓰레기가 15m까지 쌓인 '의성 쓰레기산'
+  - 유독가스로 인한 악취. 엄청난 무게로 누르는 압축열에 의한 화재
+  - 방송으로 인해 없애고 다른 곳으로 이동
+
++ Amway
+  - 태생부터 환경친화적인 기업
+  - LOC.
+  - '더불어 사는 자본주의' 환경에 대한 실천
+  - 바람으로 화장품을 만듬
+  - 동물 유래성분 및 동물 실험을 하지 않음
+  - 비건인증 받으려 노력중
+  - 뉴트리라이트의 생태계 농장
+  - "공존의 실천"
+
++ Amway의 또 다른 장점
+  1. 필환경적이다
+  2. 제품의 질이 좋다
+  3. 돈이 되는 소비?
+
++ 돈이 되는 소비
+  - 생상자 - 소비자
+  - 고품질 / 합리적인 가격 / 편리한 홈쇼핑 / 만족 보증제도
+  - Cash back
+  - 소비자에게 유리한 소비
+
++ 소비자 네트워크 구축
+  1. 내가 먼저 현명한 소비
+  2. 소비 정보로 애용자 그룹 구축
+  - 인세 수입의 기회
+
++ Amway 제품의 원가구조
+  - 20%(기존) > 40%(암웨이) : 고품질
+  - 80%(광고/유통비) > 30%(Bonus) : 소비자+사업자에게 분배
+
++ 프로슈머 - 소비가 지출이 아닌 소득이 되는!
+  - 노력에 근거하여 수입을 분배 : 21%
+  - 남을 성공시킨 대가 (Win-Win) : 9%
+
++ 어떻게 사이드 수입?
+  - 생활에서 쓰는 필수품에 대한 한달 소비 기준
+  - 최소 3%를 달성
+  - 내가 20만점을 달성하고, 친구에게 소개하여 또 20만점 소비
+  - 6명에게 소개했을 때 약 15만원이 캐시백
+  - 전체 소비의 120만점에 도달하면 브론즈파운데이션
+  - 15% 400만점 달성시, 월 80~100만원의 수입
+  - SP 1000만점 > 플래티늄 > 파운더스 에머럴드...
+
++ Who gives a crap?
+  - 화장지를 만드는 회사
+  - 수익의 절반은 기부
+  - 낙후 지역에 깨끗한 물을 제공하는 비영리단체
+  - 인도 콜카타 지역 학교들의 위생 개선 프로젝트
+  - 나머지 수익은 제품생산, 인건비, 마케팅 등에 사용
+  - 선행이 사업이 될 수 있는 시대
+
++ 내 회사가, 내 사업체가, 나의 일이 이런 일이었으면...
+
++ 가족의 건강, 이웃의 건강을 컨설팅해주는 암웨이사업이 바로 선행과 사업을 동시에!
+
++ Amway 무형의 자산 만들기
+  - 무형의 자산이 상속가능
+  - 주변과 나누는 선행이 가능
+  - 임시수입의 '시간<>돈'이 인세수입(시간>자산>돈)의 재정과 시간의 자유
+
++ 교토삼굴 : 영리한 토끼는 3개의 굴을 판다
+
++ Why Amway Biz?
+  - 안정적 수입
+  - 건강 / 노후
+  - 효도 / 재정
+  - 여행 /자식
