--- a/_posts/winners/biz_lecture/2023-08/2023-08-15-N&B-(오경아 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-15-N&B-(오경아 리더).md
@@ -4,19 +4,26 @@ title:  "N&B : 오경아 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners]
+  - [Amway, Winners, N&B]
 
 toc: true
 toc_sticky: true
 
 date: 2023-08-15
-last_modified_at: 2023-08-23
+last_modified_at: 2023-08-24
 
 audio_file : assets/amway/audio/2023-08-15-N&B-(오경아 리더).mp3
 ---
 
 <audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
 
+
 ## N&B / 오경아 리더 (8/15)
+### 부제 : 꿈의 실현
+
++ "암웨이 사업은 어렵지 않다"
+  - '암웨이 하는 사람'과 '암웨이 사업하는 사람'으로 구분됨
+  - 암웨이 사업하는 사람에게는 암웨이가 어렵지 않다
+  - 힘든 과정이 누군가에게 들려줄 힘이 되기 떄문
 
 + 
