--- a/_posts/winners/biz_lecture/2023-08/2023-08-16-초대밖에-난몰라-(송진숙 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-16-초대밖에-난몰라-(송진숙 리더).md
@@ -23,5 +23,49 @@ video_file : assets/amway/video/2023-08-16-초대밖에-난몰라-(송진숙 리
 
 ## 초대밖에 난 몰라! / 송진숙 리더 (8/16)
 
++ 암웨이사업을 네 글자로 한다면?
+  - 가 : 가서
+  - 만 : 나고
+  - 이 : 이야기해서
+  - 초 : 초대하는 일
 
-+ 
+### 초대의 달인 되기!
++ 초대를 잘 하는 사람은 누굴까?
+  1. 많은 시도를 한 사람
+  2. 많은 거절을 받아본 사람
+
++ 초대를 못하는 사람은 누굴까?
+  - 믿음과 확신이 없는 사람
+  - 미팅을 통해 믿음과 확신을 만들어가는 시간이 중요하다
+
++ 능력키우기
+  - 데려다 앉히는 능력
+
++ 초대를 어떻게!!
+  1. 양자택일
+  2. 무조건 입을 떼라
+  3. 프로모션 활용
+  4. 내가 판단하지 마라
+  5. 미안함을 빚지게 하라
+  6. 미팅에는 배려가 없다
+
++ 초대 = 집중
+  - 머릿수 늘리기
+  - 만나는 횟수 늘리기
+  - 본보기가 되어보자
+
++ 시스템이 있는 곳으로 초대
+  - 온라인 미팅 : 줌, 라방
+  - 오프라인 미팅 : 미팅장, 홈미팅
+
++ 나의 온도를 체크하자
+  - 초대에도 온도가 필요하다
+  - 늘 온도체크 해라
+
++ 부딪쳐야 기회를 얻습니다
+  - 흔들어야 감이 떨어진다
+  - 지금 나는 행동하고 있는가?
+  - 본질에 흔들리지 마라
+
++ "무엇이든 할수있는 '나이'다. 무엇이든 할수있는 '나'이다."
+
