--- a/_posts/winners/biz_lecture/2023-08/2023-08-19-3년만에-종잣돈-1억-모으기-(방중하 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-19-3년만에-종잣돈-1억-모으기-(방중하 리더).md
@@ -4,7 +4,7 @@ title:  "3년만에 종잣돈 1억 모으기(with amway) : 방중하 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners, N&B]
+  - [Amway, Winners]
 
 toc: true
 toc_sticky: true
