--- a/_posts/winners/biz_lecture/2023-08/2023-08-22-사업성장을-위한-5가지팁-(김민기 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-22-사업성장을-위한-5가지팁-(김민기 리더).md
@@ -4,7 +4,7 @@ title:  "사업성장을 위한 5가지 팁 : 김민기 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners, N&B]
+  - [Amway, Winners]
 
 toc: true
 toc_sticky: true
@@ -16,5 +16,48 @@ last_modified_at: 2023-08-23
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7BykbbI1lhw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 사업성장을 위한 5가지 팁 / 김민기 리더 (8/22)
+### 생각한스푼
 
-+ 
++  90% / 9% / 1%
+  - 의사결정에 있어서의 구분
+  - 90% : 감정
+    - 부/긍정의 감점
+  - 9% : 생각
+    - 궁금증과 더불어 대상에 대한 생각
+  - 1% : 믿음. 깨달음
+    - 학습을 통한 지식, 지식을 통한 꺠달음
+
++ 판단의 기준은 "감정 > 생각 > 믿음"으로..
+  - 초기 사업의 힘든 점이 '감정'이다.
+
++ 생각의 방향
+  1. 고백의 힘
+    - 암웨이가 힘든 이유는 '고백'에 있다
+    - 좋아하면 고백하라
+  2. 대체불가
+    - 다른데는 없는 암웨이만의 대체불가를 이야기하라
+    - 소비자 한 명당, 하나의 제품만이라도 감동하게 만들어라
+    - 암웨이는 물건을 파는게 아니라, 마음을 사는 것
+  3. 문제해결
+    - 사람들은 문제의식이 없다.
+    - 문제의식이 없는 이들에게 암웨이가 다가오지 않는다
+    - 미래의 이미지를 그릴 수 있는 방식으로 대화하라
+    - '암웨이 플랜'이 나와 너의 관계에 속함을 인식시키라
+  4. 동반성장
+    - 너도 좋고 나도 좋고...
+    - Win-Win에 대한 설명이 중요함
+  5. 롱텀전략
+    - 제품에 대한 신뢰와 감동을 가진 사람은 '죽을 때까지' 쓴다
+    - 한 번의 제품감동에 사람들은 끝까지 애용자가 된다
+
++ 영화 '곡성'의 유명한 대사
+  - "뭣이 중헌디?"
+  - "현혹되지마소"
+  - 이 두 가지를 사업에 생각하면 좋다
+
++ 추천책
+  1. 스타벅스, 커피 한 잔에 담긴 성공신화 / 하워드 슐츠, 도리 존스 양
+  2. 딜리버리 해피니스 / 토니 셰이
+  3. 왜 일하는가 / 이나모리 가즈오
+  4. 배민다움 / 홍성태
+
