--- a/_posts/winners/biz_lecture/2023-08/2023-08-15-N&B-(오경아 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-15-N&B-(오경아 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-15
-last_modified_at: 2023-08-24
+last_modified_at: 2023-08-28
 
 audio_file : assets/amway/audio/2023-08-15-N&B-(오경아 리더).mp3
 ---
@@ -25,5 +25,14 @@ audio_file : assets/amway/audio/2023-08-15-N&B-(오경아 리더).mp3
   - '암웨이 하는 사람'과 '암웨이 사업하는 사람'으로 구분됨
   - 암웨이 사업하는 사람에게는 암웨이가 어렵지 않다
   - 힘든 과정이 누군가에게 들려줄 힘이 되기 떄문
+
++ 시스템 안에서 성공한다
+
++ 무엇이 어려웠나?
+  - 크게 어려운 것은 없었다
+  - 거절
+    - 초기에 잠깐 헷갈렸으나, 미팅과 책, 그리고 제품을 통해 확신을 갖게 됨
+    - 거절한 사람들이 언젠가... 시간이 지나서 다시 전화가 오는 경험도 갖게 됨
+    - 사랑을 가지고 암웨이를 지속적으로 해야함
 
 + 
