--- a/_posts/winners/biz_lecture/2023-08/2023-08-15-N&B-(오경아 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-15-N&B-(오경아 리더).md
@@ -35,4 +35,214 @@ audio_file : assets/amway/audio/2023-08-15-N&B-(오경아 리더).mp3
     - 거절한 사람들이 언젠가... 시간이 지나서 다시 전화가 오는 경험도 갖게 됨
     - 사랑을 가지고 암웨이를 지속적으로 해야함
 
-+ 
++ 느낀점
+  - 내가 좋은 사람이 되어가고 있다는 것
+  - 눈에 하트 가득한 사람이 되어가고 있다는 느낌
+  - 암웨이를 통해 받은 것 중에 가장 작은 것이 '돈'
+
++ 성공 = 꿈 + 습관(행동)
+  - 꿈은 변화되고 구체화되며 점진적으로 실현된다
+  - 작은 꿈부터 구체적으로 꾸고, 이뤄가라
+  - 꿈은 사랆을 성공으로 이끄는 신앙이다
+  - 몽상가가 되면 안된다
+  - 행동하는 사람이 되어야 한다
+  - 꿈을 위해서 잠시 포기해야 할 것도 생기기 마련이다
+    - 집중적으로 몰입해야하는 사업이기 때문
+
++ 암웨이 안에 다 있다
+  - 인간의 모든 욕구의 해결책
+  - 어떤 변수와 난관이 와도 꿈의 크기를 키워나가라
+  - 꿈이 없는 사람이 가난하다
+
++ 꿈의 실현을 위한 두 번째 단계 - 목표설정
+  - 반드시 "꿈 + 기간"이 있어야 한다
+  - 구체적인 날짜가 있어야 한다
+  - 아무리 유능한 사람도, 목표가 정확한 무능한 사람을 쫓아갈 수 없다
+  - 목표 설취 날짜를 정확하게 적어라
+  - PV도 목표를 정해라
+  - 내가 목표를 가지고 내 핀과 사업을 하면 일어 난다
+
++ 꿈의 실현을 위한 두 번째 단계 - 계획
+  - 구체적인 계획세우기를 습관화하기
+  - 구체적인 계획을 짜고 스폰서와 상담하라
+    - 아무 계획도 없이 스폰서에게 맡기는 것이 아니라, 세워놓고 이야기하라
+    - 막연한 소모성 상담은 하지마라
+  - 암웨이가 힘든것은 당연한 일
+    - 내 꿈의 크기가 나를 버티게 만들었다
+
++ 100%의 믿음이 필요하다
+  - 이 사업이 에너지 사업임을 알고 믿어라
+  - 믿음은 행동할 때 커진다
+  - 누군가를 만나서 거절을 당할때 오히려 의지가 생긴다
+  - "하늘은 스스로 돕는자를 돕는다"
+  - 진정한 노력은 배신하지 않는다
+
++ 행동하지 않으면서 고민하면, 믿음은 쪼그라든다
+  - 나 자신, 시스템, 제품... 그 믿음이 나를 성공으로 이끈다
+  - 의지적으로 믿다보면, 행동으로 나타나고, 행동하다보면 믿음 100%가 된다
+
++ 스폰서의 말은 시간을 갖고 믿어라
+  - 무조건 YES
+
++ 신념 = 자신감
+
++ 행동
+  - 원하는 목표를 위해서는 내 앞에 작은 만족은 유보하라
+  - 매일매일 움직여라
+  - 어떻게든 집에서 나오고, 한 사람이라도 만나라
+  - 간절하면 반드시 만날사람은 있다
+
++ 가.만.이.초
+  - 가서, 만나서, 이야기하고, 초대하라
+
+
++ 명단작성
+  - 오로지 명단이 필요한 사업
+  - 원칙
+    - 다 적는다
+  - 내 생각 내려놓고 무조건 적는 것
+  - 매주 매월 추가되고 변화된다
+  - 명단 노트는 반드시 따로 있어야 한다
+  - 결국 명단에 있는 사람은 회원이 된다
+  - 먼저 제품을 쓸 수 있는 사람이어야 한다
+  - 초기부터 사업위주로 하면 힘들고, 제품을 쓸 사람으로 진행
+  - 친밀도가 높은 사람부터
+  - 가족이 오히려 더 힘들다
+    - 가족에 상처받지 마라
+    - 대부분 가족에게 암웨이를 자세히 소개하지 못했기 때문
+  - 적어야 할 사람 특징
+    - 끈기있는 사람
+    - 재미 있는 사람
+    - 성실한 사람
+    - 꿈이 있는 사람
+    - 경제적 능력이 있는 사람
+      - 인격적으로 경제적으로... 나보다 나은 사람을 찾아라
+    - 부지런한 사람
+    - (의욕적으로) 바쁜사람
+    - 성공자의 삶을 원하는 사람
+    - 자신의 삶에 충실한 사람
+    - 긍정적인 사람
+    - 이미 부업을 하고 있는 사람
+    - 노후가 불안한 사람
+    - 저축하면서 쪼개기하는 사람
+    - 인격이나 성품이 남에게 존경받는 사람
+    - 시간 투자의 가치를 아는 사람
+    - 순수하고 착한 사람
+    - 여행좋아하는 사람
+    - 리더십 있는 사람
+    - 감정 기복이 없는 사람
+    - 안정된 거리에 있는 사람
+    - 갑작스런 변수를 경험해 본 사람
+    - 직장 상사때문에 스트레스를 받아 본 사람
+    - 자영업에 관심 있는 사람
+    - 아이가 아토피인 사람
+    - 피부에 관심있는 사람
+    - 물에 관심이 있는 사람
+    - 공기에 민감한 사람
+    - 요리/영양소에 관심 있는 사람
+    - 간이 안좋은 사람
+    - 집안에 병력이 있는 사람
+    - 감기에 잘 걸리는 사람
+    - 변비로 고생하는 사람
+    - 잇몸이 안좋은 사람
+    - 관절이 안좋은 사람
+    - 위가 안좋은 사람
+    - 아이들 키에 관심이 많은 사람
+  - 만만치 않은 사람을 후원하라
+  - 초이스 카다로그를 보면서 명단을 작성하라
+  - 청정기 명단 / 정수기 명단...
+
++ 한 개인의 명단에만 머물지 마라
+  - 개인을 통해 연결된 다른 이들까지 바라볼 수 있어야 고수
+  - 명단을 다 적고 스폰서와 상담
+
++ 6레그를 품어라
+  - 초보이고 일이 있다면, 3레그 먼저
+
+
++ 암웨이 사업은 경영학이 아니라 심리학
+  - 이의를 제기하는 사람...
+  - 이기지 마라라 / 언쟁하지 마라라
+  - 정답을 주지마라.
+  - 마음 상하지 않게 생각의 관점을 조금씩 바꿔나가는 것이 필요함
+  - 사람들이 생각도 비슷하고 편견도 비슷하기 마련
+  - 이의제기를 하면 우선 듣고... 질문엔 질문으로...
+  - 언쟁하면 지는 것
+  - 끊기있게 사업하면서 발전하는 모습을 보여줘라
+
++ 이미 늦었다?
+  - 60년이 넘은 미국조차도 아직 시작단계이다
+
++ 성공확률이 희박하다?
+  - 꾸준히 하면 성공할 수 있는 사업...임을 알려줌
+  - 심리상태가 약하기 때문에 말하는 것 뿐
+  - 당당한 모습으로!
+  - 칭찬과 용기
+
++ 망했다?
+  - 주변에서 누구 누가 했는데, 망했다더라...라는 말
+  - 실제로 망한사람을 볼 수 없다
+  - 꾸준히 하면 반드시 성공할 수 있는 구조이기 때문
+
++ 돈이 안된다?
+  - 현재 그닥 돈이 많지 않는 사람이 이런 말들을 함
+  - 가장 돈 안되는 일 : 직장인, 소상공인
+  - 암웨이 사업을 이해 못해서..
+
++ 아는 사람, 친구 없다?
+  - 머릿속에 세일즈를 생각하기 때문
+  - 브랜드 체인지하는 일이기 때문에, 치약 바꿀 수 있는 사람부터..
+
++ 시간이 없다?
+  - "그래서 너한테 얘기하는 것!"
+  - 가치있는 일에 시간을 낼 줄 아는 사람임을 강조
+  - 주변에 여유로운 사람을 후원해볼 것을 추천
+
++ 비싸다?
+  - 암웨이 제품들이 상대적으로 저렴해졌다.
+  - 가성비 최고의 제품들
+  - "어떤 제품이 비싸다고 느껴졌어?"라고 질문해보기
+  - 제대로 써본 사람들은 비싸다고 느껴지지 않는다
+
++ 아이들 때문에 쉽지 않다?
+  - 아이들의 미래 때문에 암웨이를 해야한다
+  - 사람들은 현재에 초점을 맞추지만, 미래에 초점을 맞춰야한다
+  - 주기적으로 찾아가면 시점을 돌아보는 시기가 온다
+  - 함께 성장하는 부모여야만 한다
+
++ 주위의 반대가 심하다?
+  - "다른거 한다고 하면 반대를 안할까?"
+  - 식당이나 자영업을 오히려 반대해야하지 않을까?
+  - 뒤집어서 생각해보도록... 특별한 기회가 될 수도 있음을 이야기하라
+
++ 다단계 아니야?
+  - "네트워크 마케팅"과 "불법 다단계"를 혼동해서 생기는 일
+
++ 남을 이용하는 것 아니야?
+  - 수익구조만 제대로 알아도 해결 됨
+
++ 어렵다, 자신이 없다?
+  - 사업은 원래 어렵다
+  - 일반 사업에 비해 암웨이 사업이 오히려 쉽다
+  - 10코어 반복을 통해 오히려 쉽게 달성 할 수 있는 사업
+    - 성공을 위한 기본 10가지 양식
+    - 10코어를 통해 복제 사업
+    - 지도이자, 지름이나 설명서
+  - 시스템의 가치를 아는 사람이 시간을 효율적으로 사용하고 성공할 수 있다
+  - 행동하는 10코어를 해야한다.
+  - 최고로 중요한 것은 '미팅 참석'
+    - 복제사업의 가장 강력한 툴
+  - 사업자라면 '제품애용'
+    - 사업자의 기준은 더블엑스를 매일 두 번 먹느냐 안먹느냐
+
++ 습관은 바꾸는게 아니라, 쌓는 것
+  - 어려운 이유는 매일 쌓지 않았기 때문
+
++ 암웨이 만한 비지니스는 없다
+  - 공을 들여서, 발자국 수를 늘려서 숙제를 빨리 끝내자
+  - 스스로 계속 움직여서 계속 해 나가자
+  - 내가 먼저 바람을 일으키는 것
+  - 오늘의 꼴찌가 내일의 1등이 될 수 있다
+  - 행동하지 않는 사람에겐 '시스템'이 의미가 없다. 행동하는 사람에게 '시스템' 의미 있다!
+  - 보통 사람이 할 수 있는 유일한 성공의 기회
+  
