--- a/_posts/winners/biz_lecture/2023-08/2023-08-17-원데이-(윤주리 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-17-원데이-(윤주리 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-17
-last_modified_at: 2023-08-23
+last_modified_at: 2023-08-28
 
 audio_file : assets/amway/audio/2023-08-17-원데이-(윤주리 리더).mp3
 ---
@@ -19,4 +19,11 @@ audio_file : assets/amway/audio/2023-08-17-원데이-(윤주리 리더).mp3
 
 ## 원데이 / 윤주리 리더 (8/17)
 
-+ 
++ 방법은 누구나 다 똑같다
+  - 어떤 마음가짐으로 하느냐에 따라 다르다
+
++ 암웨이와 첫 만남
+  - 옆집 엄마가 쉬워보여서 하게 됨
+  - 남편으로부터 오는 시그널로 시작하게 됨
+  - 남편이 없어도 살만큼의 '보험'
+  
