--- a/_posts/winners/biz_lecture/2023-08/2023-08-17-원데이-(윤주리 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-17-원데이-(윤주리 리더).md
@@ -15,7 +15,11 @@ last_modified_at: 2023-08-28
 audio_file : assets/amway/audio/2023-08-17-원데이-(윤주리 리더).mp3
 ---
 
+
+
 <audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
+
+
 
 ## 원데이 / 윤주리 리더 (8/17)
 
@@ -26,4 +30,55 @@ audio_file : assets/amway/audio/2023-08-17-원데이-(윤주리 리더).mp3
   - 옆집 엄마가 쉬워보여서 하게 됨
   - 남편으로부터 오는 시그널로 시작하게 됨
   - 남편이 없어도 살만큼의 '보험'
+  - 다른 부수입 사업을 알아보게 됨 - 빵집/미술학원
+  - 남편은 암웨이 반대
+    - 반대에 의한 고집으로 암웨이 사업 강행
+  - 쉬워보여서 시작했고,
+    - 쉽게 시작할 수 있어서 시작했다
+    - 60억의 자산가치를 갖은 암웨이는 결코 쉽지만은 않다
+    - "내가 특별한 자리에 특별한 일을 하러 온게 아니다"
+
++ 사업의 시작
+  - 브랜드체인지에 500만원
+  - 다음달이 되면서 '본전'을 생각하며 사람들을 만나기 시작
+  - 소소한... 평범함이 유지될 수 있도록
+  - 우리에겐 안전장치가 필요하다
+  - 사업을 시작하면서 우리에게 자격을 요구하지 않는다
+  - 시스템 안에서 시스템을 누리는 사람들을 통해 사업
+
++ 60억 자산의 꿈
+  - 해야할 책임감이 있음
+  - 마음 속에 인생을 바꾸려면 각오를 해야 한다
+  - 당연한 자리에 나오게 되면 키워나갈 수 있다
+  - 자신이 없고 이유를 못찾으면, 그냥 해라
+  - 꿈꾸는 것도 학습니다
+  - 나의 행목을 지키겠다는 결심이면 충분하다
+
++ 내부적으로의 성장
+  - 내가 성장하든지 팀이 성장하든지
+  - 성장하지 않으면 그대로 머물 수 밖에 없다
+
++ 생각의 확장
+  - 미팅장에 스폰서의 표정과 말투를 복제하라
+  - 어떤 마음으로 스피치를 듣느냐가 중요하다
+
++ 성장을 하려면...
+  - 배운다
+    - 스폰서에게서 잘 배운다
+  - 나의 부족한 점을 되돌아 본다
+    - 항상 최선을 다하는 건 없다
+    - 항상 내일이 더 최선을 다하는 것
+    - 핀업을 못하는 원인은 내가 더 잘 안다
+  - 정면승부
+    - 내 성격과 내 문제에 대한 정면승부
+
++ 각자의 다이아몬드를 상상하라
+  - 상상하는 힘
+  - 성공에 관한 책이나 미팅에서 이야기하는 공통점
+    - 시키는데로 안한다
+  - 상상을 많이 하면 잠재의식이 깨어난다
+  - 행동의 무의식을 바꿔야 한다
+  - 다이아몬드의 잠재의식을 갖게 되면, 사람을 만날때 다이아몬드의 모습이 나온다
+  - 신념이 강해지면 확인이 된다
+  - 매일 아침, 매일 자기전... 나의 모습을 상상하고 각인시키자
   
