--- a/_posts/winners/biz_lecture/2023-08/2023-08-18-N&B-툴사용법-매출증식요령-만남과초대-(김효은 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-18-N&B-툴사용법-매출증식요령-만남과초대-(김효은 리더).md
@@ -10,10 +10,11 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-18
-last_modified_at: 2023-08-18
+last_modified_at: 2023-08-28
 ---
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bnuZv1XhF8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/s2o5Tbzr2II?si=KqDGlHDyOH6ZjTSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 툴사용법, 매출증식요령, 만남과 초대 / 김효은 리더 (8/17)
