--- a/_posts/thinking/self_development/2023-08-26-[특강]-꿈이-있는-사람은-늙지-않는다-(김미경).md
+++ b/_posts/thinking/self_development/2023-08-26-[특강]-꿈이-있는-사람은-늙지-않는다-(김미경).md
@@ -2,9 +2,9 @@
 title:  "[특강] 꿈이 있는 사람은 늙지 않는다 : 김미경 강사"
 
 categories:
-  -  Winners
+  -  Self development
 tags:
-  - [Amway, Winners, STP]
+  - [Amway, Thinking]
 
 toc: true
 toc_sticky: true
