--- a/_posts/winners/biz_lecture/2023-08/2023-08-18-N&B-툴사용법-매출증식요령-만남과초대-(김효은 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-18-N&B-툴사용법-매출증식요령-만남과초대-(김효은 리더).md
@@ -19,4 +19,188 @@ last_modified_at: 2023-08-28
 
 ## 툴사용법, 매출증식요령, 만남과 초대 / 김효은 리더 (8/17)
 
-+ 
++ 실기편
+  - 행동이 수반되어야 하는 부분
+
++ 아무것도 하지 않으면 아무일도 일어나지 않는다!!
+
+### 1. 만남과 초대
++ 만남과 초대
+  - 암웨이 사업의 기본 : 다른 사람에게 사업을 알려주는 것
+  - 초대와 후원이 성공과 실패를 결정
+  - 암웨이를 잘한다는 건, 초대를 잘한다는 거
+  - 초대 < 초대 < 초대 (보상의 크기를 좌우한다)
+
++ 가만이초 사업 (가서 만나고 이야기하고 초대)
+  - 시스템 중 자기 혼자 스스로 해야 하는 첫번째 과정
+  - (두렵고 어색하고 안될 수 있다) 당연한 현상
+  - 거절을 게임처럼... 어느 순간 거절이 두렵지 않게 됨
+
++ 미팅집중 (에너지주유소)
+  - 만남과 초대를 잘하려면 제일 먼저 미팅참석이 되어야 한다.
+  - 모든 사업의 노하우를 전수 받을 수 있다 (미팅집중)
+  - 미팅속에서 받은 에너지가 곧 초대자에게로!
+  - 나의 생각을 바꾸게 되고 '나도 할수 있다'라는 자신감을 얻어가는 과정
+  - 리더가 되는 과정을 배우는 곳
+    - 리더의 모습이 아니면 초대가 되지 않는다
+    - tip : 미팅 중 떠오르는 사람이 있으면 꼭 메모해놓고 연락하기
+    - (명단작성 : 함께 여행가고 싶은 사람, 평생 도와줘도 안 아까울사람)
+
++ 만남 초기 단계
+  1. 카톡/전화의 목적은 "만남을 위한 약속잡기"
+    - 시간과 장소만 정하고 끊기. 전화로 사업설명 안하기
+  2. 동창회, 계모임 등 모임에서 전하지 않기
+  3. 동의 없이 무작정 사업설명에 초대하지 않기
+  4. 후원 보다는 미팅이 우선
+  5. 나보다 나은 사람 후원 하기
+    - 꿈, 비전이 있는 사람 / 열심히 바쁘게 사는 사람 / 가까운 지역 / 사고가 유연한 사람 / 긍정적인 사람
+  6. 부부 후원을 중심으로 전하기
+
++ 만남의 자세
+  - 나 자신 (변화되는 모습)
+  - 나의 이미지는 내가 만드는 것 (이미지 메이킹)
+  - 전문가 느낌으로 (나는 다이아몬드다)
+  - 나의 모습을 보고 암웨이가 하고 싶어지는 일
+    - 내 모습이 곧 암웨이. 내 모습이 곧 위너스. 나는 곧 명품브랜드
+  - 소개를 받거나 파트너 후원시 첫인상
+    - 콘크리트 법칙 : 첫인상은 3-5초 만에 결정
+    - 처음에 받아들인 이미지가 마치 콘크리트처럼 딱딱하게 굳어버려서 나중에는 좀처럼 바뀌지 않는다는 의미
+  - 미인대칭 (미소짓고, 인사하고, 대화하며, 칭찬하기)
+
++ 대화의 원칙 1:2:3
+  1. 1분 동안 말을 했다면
+  2. 그 두배인 2분 동안은 귀를 기울여 듣기
+    - 경청 : 많이 듣고 적게 말하기. 소통의 시작
+  3. 경청한느 2분 동안에 최소한 세번은 맞장구를 치자.
+    - 적극적 경청
+
++ 질문하기 (FORM)
+  - Family 가족 / Occupation 직업 / Receration 취미 / Money 경제상황
+
++ 칭찬하기
+  - 조금만 바꿔도 크게 달라진다. 장점을 찾아서 구체적
+
++ 만남의 자세
+  1. 1:1 미팅(초대와 팔로우 업을 위한 미팅)
+    - 시스템으로 초대까지 해야 사업이 확장&복제된다.
+  2. 1:다의 미팅은 피하라
+  3. 진실되고 진정성 있게
+    - 함께 여행 가고 싶어 / 내가 도와줄께 / 우린 할 수 있어
+  4. 모든 것을 다 알려주지 말 것 (힘들어 할 수도 있다)
+  5. 결과에 연연하지 않기 (조급함 X, 상대방의 때가 있다)
+  6. 논쟁하지 않기 (수긍하고 공감해주기)
+  7. 정성을 들이되 매달리지는 말라
+
++ 1:1 미팅 신뢰쌓기
+  1. 1:1 미팅은 내가 찾아가는 홈미팅 (감동을 줘라)
+    - 감동을 받을 때 마음이 열린다 (경청, 공감은 소통의 시작이다)
+  2. 짧게 보더라도 만나의 횟수를 늘려라 (일주일에 한번)
+    - 강도보다 빈도
+  3. 필요할 때가 아니라 평소 안부전화를 자주하라. (카톡 활용, 카톡생일 알람)
+
++ 자세는 모든 것
+  1. 자세는 밖으로 드러난 속마음 (자세는 나의 모든 것)
+    - 암웨이를 진정 사랑하고 나를 진정 사랑하자
+  2. 10 CORE를 통한 성공자의 긍정적인 자세를 갖추자
+  3. 당당한 자세 (암웨이사업에 대한 확신과 믿음) _ 자신감
+    - 자신감이란 재능임 동시에 선택
+    - 열정적인 자세 (나는 할 수 있다 / 나는 무조건 된다)
+  4. 배우는 자세 (= 겸손한 자세)
+    - "다 안다"라고 샛ㅇ각하는 순가 "모르는 것"
+
+
+### 2. Tool 사용법
++ Tool 이란
+  - 어떤 목적을 이루기 위한 도구
+  - 상대방이 암웨이를 이해하게 하는 수단
+  - 부정적인 사람을 긍정적인 사업으로 보게 하는 일
+
++ 중요한 Tool
+  1. 나 자신 (변화되는 모습)
+    - 깔끔한 옷차림. 단정한 머리스타일. 자신감있는 목소리
+    - 나의 모습을 보고 암웨이가 하고 싶어지는 일이다.
+  2. 위너스시스템 : 성공자의 노하우가 모인 학교
+    - 내가 전달하려 하지 말고 시스템을 통해서 전달
+  3. 제품 : 네트워크의 씨앗
+    - 소비자 > 애용자 > 사업자
+
++ Tool의 종류 (객관적이어야 한다)
+  - 책 / 음원 / 카다로그 / 어취브 / 아마그램 / 매장체험 / A컨텐츠 / 제품 / 샘플링 / SNS
+  - 책 - 성향에 맞게
+    - 얇은 것부터 가볍게
+  - 음원 / 유튜브
+    - 너무 긴 것보다 짧은 것 부터
+  - 카다로그&아마그램
+    - 정성을 다해서 체크해서 전해주기
+  - 제품 & 샘플링
+    - 내가 써본 제품만 감동을 전하게 되어 있다
+      - 브랜드체인지 속도가 빨라야 매출속도도 증가한다
+    - 이미 제품을 쓰고 있는 소비자에게 갈 경우
+      - 그 제품에 대한 뉴스기사, 유튜브, 인스타 링크걸어 보내기
+  - 집
+    - 제2의 사업장 (미팅장 초대전 단계)
+    - 생활속 암웨이를 보여주기 좋다
+
+
+### 3. 매출증식
++ 매출증식요령
+  1. 먼저 나 자신이 100% 애용자가 되어야 한다.
+    - 내가 써본 제품만 감동을 전할 수 있다 (내가 모델)
+    - 내가 좋아하는 제품의 수가 많을 수록 소비자 네트워크는 커진다.
+
+  2. 사업설명을 통해 사업자 후원
+    - 단순히 제품의 매출로 성장은 한계가 있다.
+    - 나 자신이 반드시 사람들에게 영향력을 가져야 한다
+    - 나의 변화가 사업을 키우는 지름길 (나의 신뢰도를 높여라)
+    - 진정으로 원ㅇ하고 스스로 변하는 6명을 찾는 사업
+
+  3. 시간을 투자하고 정성을 쏟아 붓자 (반복의 힘)
+    - 내가 애용자가 되고 감동을 전하면 소비자는 반드시 나온다
+    - 10~25명 애용자 만들기
+    - 1명을 100번 만나는 사업
+
+
++ 매출증식의 노하우
+  1. 첫째도 둘째도 사람이다. 사람을 귀하게 여기자!
+  2. 가까운 사람한테 잘하면 멀리 있는 사람도 얻을 수 있다.
+  3. 파트너의 명단은 내 명단이다.
+  4. 축복의 사람들은 축복의 언어를 사용한다.
+  5. 파트너를 바라보지 말자. 나만 잘하면 된다.
+  6. 신뢰를 줄 수 있는 모습으로 다가가라.
+
++ 꿈 = 와이 암웨이
+  - 암웨이를 통해 살고 싶은 삶
+
++ 목표설정
+  1. 무슨일이 생겨도 목표는 수정하지 않을 각오로 설정
+  2. 매일 매일 선포하기 (간절히 원해야 한다)
+  3. 목표가 있어야 행동이 나온다
+  4. 목표는 명확하게, 구체적, 기한을 정한다 (스폰서와의 상담필수)
+  5. 목표 앞에 핑계가 있으면 안된다.
+  6. 내가 도전하기 힘든 목표를 잡고 뛴다
+
++ 데모 (백문이불여일견)
+  - 첫 소비자 만들기에 유리하다
+
++ 소개받기 (암웨이 = 소개마케팅)
+  - 치약 쓸 사람 소개부탁드려요 / 부담 안줄께요
+  - 한분 한분 정성껏 관리하기
+  - 을의 입장으로
+    - 소비자에게 주고 또 주고 계속주자
+    - 섬기고 또 섬기자
+    - 준것은 잊어버리고 받은 것만 기억하자
+
++ 프로모션의 달인 되자
+  1. 본사 프로모션 적극 활용하기
+    - 매월 초 그달의 프로모션 관심갖기
+  2. 본사 프로모션 흉내내기
+    - 신규가입시 선물 주기
+  3. 초대 프로모션 (20회 / 10회 / 5회 미팅참석시 선물증정)
+  4. 애용소비자 프로모션 - 조력자 만들기
+    - 치약 10개 사면 샘플챙겨주기
+
++ 믿음
+  - 세상에서 가장 강력한 믿음은 자신에 대한 믿음
+  - 어떤 흔들림, 역경, 상황속에서도 나에 대한 믿음만 있다면 포기 하지 않고 지속해나갈 수 있다.
+  - 나는 할 수 있다! 나는 나를 믿는다!!
+  - 나는 무조건 된다! 나는 다이아몬드다!!
