--- a/_posts/winners/biz_lecture/2023-08/2023-08-19-3년만에-종잣돈-1억-모으기-(방중하 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-19-3년만에-종잣돈-1억-모으기-(방중하 리더).md
@@ -4,17 +4,106 @@ title:  "3년만에 종잣돈 1억 모으기(with amway) : 방중하 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners]
+  - [Amway, Winners, STP]
 
 toc: true
 toc_sticky: true
 
 date: 2023-08-19
-last_modified_at: 2023-08-23
+last_modified_at: 2023-08-28
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/A3SwkEjnhY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## 3년만에 종잣돈 1억 모으기(with amway) / 방중하 리더 (8/19)
 
-+ 
+### 1. 암웨이 수입의 특징
++ 본업 외 추가수입
+  - 보통 한달에 50~100만원이 모자람
++ 인세수입 (파이프라인의 우화 동영상)
+  - 한번 만들어 놓으면, 지속적으로 나온다
++ 상속가능한 현금 흐름
+  - 자녀와 손자에게 물려줄 수 있는 수입
++ 무제한수입
+  - 비지니스의 규모가 무한대
++ 물가연동형수입
+  - 소비자 가격을 손댈 수 없어서 이익률이 변동되기 힘들다
++ 국제사업 외화수입
++ 내가 소비하고 주위에 소비하는 사람을 늘려 수입을 만든다
+
+### 2. 인세수입
++ 노동수입 = 인세수입을 돕는자 / 인세수입을 받는자
++ 두 축의 가장 큰 점은 '돈을 버는 자'가 나인가?
+  - 수입을 버는 주체가 내가 아니면 나는 노동 수입자
+
++ 노동자의 수입
+  - 퇴직 후의 수입을 준비하지 않으면 낭패
+  - 퇴직 시 바로 수입의 단절을 경험
+
++ 암웨이
+  - 내가 하지 않더라도... 내가 현장에 있지 않아도 핀업
+  - 내가 매달리지 않아도 끊임없이 나오는 수입이 발생
+
++ 내가 누워 있으면 수입이 계속 될까?
+  - 현대카드 사장님은 누워있으면, 수입이 계속 될까?
+
++ 암웨이 수입
+  - 생필품이기 때문에 지속적인 수입이 가능하다
+  - 우리는 광고만 하면되고, 암웨이가 수입을 주는 것
+  - 지점은 1차원적인 수입
+  - 암웨이는 개인이 본점이 될 수 있음
+
++ 암웨이 수입의 원천
+  - 200원 원가 -> 1000원의 소비자 가격
+  - 암웨이는 350원의 원가 -> 700원의 소비자
+  - 중간의 350원을 소비자에게
+  - 제품의 품질과 관계없는 중간 마진을 소비자에게 돌려주는 사업
+
++ PV / BV란?
+  - 물건에 붙은 PV에 물가상승률을 감안한 BV로 수입측정
+
++ 혼자 매출이 아니다
+  - 함께 쓰는 그룹의 매출이 나의 매출
+  - 우리가 잘 알지 못하는 2차보너스
+    - 알려준 사람이 1000만 매출을 달성하게 도와주면, 나에게 보너스가 추가로 달성
+  - 남을 월 200만원 벌 수 있도록 도와주면 나도 성장
+  - 희미한 3차 보너스
+    - 3그룹을 잘 키우면 월800만원의 수입이 발생
+
++ 3년에 1억 모으기
+  1. 한달에 300만원 아껴서 모으기
+  2. 암웨이 어플 깔고 설명하기
+
++ 3년 결산
+  - 1700만원 연말 보너스
+  - 3200만원 연말 보너스
+  - 5100만원 연말 보너스
+
++ SOP
+  - 가격은 저렴하지만 꾸준한 소비로 수입확장
+
++ 여행보상
+
++ 지금 꼭 해야하는 가?
+  - 위기의 순간에 성장하는 암웨이
+  - 코로나와 가게부채로 인한 사회의 위기 속에서 암웨이는 성장 중
+  - 지금이 바로 좋은 타이밍이다!
+
++ 나이가 들수록!
+  - 나이가 들수록 건강식품을 찾게 된다
+
++ 자산시장의 붕괴
+  - 매달나오는 캐시가 중요한 시대가 되어버림
+
++ 경제적 자유
+  - 어쩌면 우리는 경제적 자유가 아닌 길을 따라가고 있다
+  - 자유를 해낸 사람이 있다면, 그 사람을 따라 사는 것은 어떨까?
+
++ 인생 사명서
+  - 우리는 눈 감는 날까지 이 멋진 기회와 비전과 꿈을 전달할 것이며, 결과가 아닌 과정에서 답을 찾는다
+  - 이 세상에 방향성 없이 고민하고 희망과 가능성을 찾지 못하는 사람에게 희망과 가능성의 증거가 되는 등대가 된다
+  - 금전과 시간이 허락하는 한 보다 많은 사람들을 보다 다양하게 도와 나갈 수 있도록 한다
+  - 도와줌이 도움받음보다 더 행복하다는 것을 항상 느끼고, 다른 사람들도 그것을 알 수 있도록 돕는다.
+  - 성공학 서적에 적힌 모든 것들이 다 옳다는 것을 내 정신과 몸으로 그리고 결과로 증명한다
+  - 일일선을 통해 하루 잠시라도 한 가지라도 부인이나 가족, 주위 사람들, 모르는 사람들, 아니면 지구와 세상에 좋은 도움을 준다
+  - 나는 이렇게 살 것이다
