--- a/_posts/winners/biz_lecture/2023-08/2023-08-23-암웨이 비지니스 안의 비범함-(한규주 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-23-암웨이 비지니스 안의 비범함-(한규주 리더).md
@@ -4,7 +4,7 @@ title:  "암웨이 비지니스 안의 '비범함' : 한규주 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners, STP]
+  - [Amway, Winners]
 
 toc: true
 toc_sticky: true
