--- a/_posts/winners/biz_lecture/2023-08/2023-08-24-TA-OSR-게스트-(최영란 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-24-TA-OSR-게스트-(최영란 리더).md
@@ -4,7 +4,7 @@ title:  "TA OSR 게스트 : 최영란 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners, STP]
+  - [Amway, Winners]
 
 toc: true
 toc_sticky: true
