--- a/_posts/winners/biz_lecture/2023-08/2023-08-28-인생프로젝트-(류지민 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-28-인생프로젝트-(류지민 리더).md
@@ -4,7 +4,7 @@ title:  "인생 프로젝트 : 류지민 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners, N&B]
+  - [Amway, Winners]
 
 toc: true
 toc_sticky: true
