--- a/_posts/winners/biz_lecture/2023-08/2023-08-21-생각의 힘-(김남득 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-21-생각의 힘-(김남득 리더).md
@@ -10,13 +10,105 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-21
-last_modified_at: 2023-08-23
+last_modified_at: 2023-08-28
 
 audio_file : assets/amway/audio/2023-08-21-생각의 힘-(김남득 리더).mp3
 ---
 
+
 <audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
+
 
 ## 생각의 힘 / 김남득 리더 (8/21)
 
-+ 
++ 진지한 고민의 시작
+  - 미국에서 직장생활하면서 위기
+  - 노동수입 외에 다른 방법에 대한 방향을 고민
+  - 생각의 힘으로 사업을 시작하게 됨
+  - 골방에서의 두 달 동안 답을 찾게 됨
+
++ 내가 왜 이럴까?
+  - 내가 직장인이기 때문이다
+  - 앞으로 못하는 것을 생각하게 됨
+  - 인간이 기본적으로 요구되는 것들을 할 수 없다는 현실을 깨닫게 됨
+  - 직장인이라는 사실이 내가 하고 싶은 것을 할 수 없게 만든다는 것을 알게 됨
+
++ 사업설명
+  - 듣고 집에 와서 다시 알아보게 됨
+  - 이틀동안 와이프를 설득해서 듣게 만듬
+
++ 잘 할 수 있는 이유
+  - 직장을 다니면서 많이 할 수 없는 현실
+  - 하지말아야할 이유를 해야할 이유로 바꿔버림
+  - 사람이 없기 때문에 가려고 했다
+  - 꿈이 얼만큰 간절한지가 중요함
+
++ 나이가 들어도 젊은이들과 함께 할수 있는 일
+  - 암웨이가 주는 가치
+
+
+### 신념
++ 부자에 대한 생각
+  - 돈이 없을 떈 부정적으로 본다
+  - 부자가 되어보니, 다른 부자들을 보니 그렇지 않다는 것을 알게 됨
+  - 인생의 선택에서는 모든 후회가 남기마련, 하지만 그 선택을 정답으로 만드는 것이 인생
+  - "당신이 심겨진 곳에서 꽃을 피워라"
+  - 부자란... 돈에서 자유로운 사람
+
++ 친구에 대한 생각
+  - 친구를 잃는 사업은 아닐까?
+  - 그렇다면 "친구가 뭐라고 생각하는가?"
+  - 우리는 친구를 잃지 않았다. 단지 친구를 업그레이드했을 뿐이다.
+  - 내가 자주 만나는 사람들의 평균 연봉이 내 연봉.
+  - (노는)물과 책을 바꿔야 한다
+
++ 욕심에 대한 생각
+  - 꿈과 욕심의 차이
+  - 욕심 : 나누기 싫은 마음 / 한정적인 자원 안에서 더 가지려고 하는 심리
+  - 암웨이 사업은 욕심이 아니라 '꿈'이다.
+  - 일하지 않고 얻으려고 하는 자가 '욕심쟁이'이다.
+
++ 세상 변화의 쓰나미
+  - 변화를 알고 준비하지 않으면 안된다
+
++ 사업하다가 그만두면 시간이 아까지 않을까?
+  - 자기가 선택한 것을 정담으로 만들면 된다
+  - 암웨이를 암웨이로 보지 말고, 암웨이라는 포장지를 뜯으면 여러가지 모습이 보인다
+    - 가르침 / 배움 / 생활 ....
+    - 암웨이를 전달하는게 아니라, 암웨이 안에 있는 소중한 것들을 전달하는 것
+    - 본인의 적성에 맞는 것들을 찾아서 전달하면 된다.
+    - 못하는 것들은 팀원... 스폰서들을 통해 하면 된다.
+  - 이길 때까지 하는 프로가 되어야 한다.
+
++ 가난한자 : 원하는 것과 필요한 것을 구분하지 못한다
+  - 필요한 것에 대해 정확하게 알아야 한다
+  - 필요한 것을 알면 해야할 일에 대해서 알게 된다
+
++ 상대방이 원하는 '꿈'에 대해서 후원을 해야한다
+  - 어떻게 하면 더 깔끔한 말을 할 수 있을 까?
+  - 단순하면서도 명확한 꿈에 대한 목표를 제안하라
+  - 나이가 들어서 살고 싶은 삶에 대한 제안
+
++ 10 Core를 하면 다 잘될까?
+  - 생각의 힘이 중요하다
+  - The Function of Time : 시간의 함수 - 그러나 시간만이 아니다
+  - 10Core 뿐만 아니라, 신념/노력/열정 등이 필요하다
+  - 가까이 있는 성공자들의 신념과 노력, 열정을 배우고 내 것으로 만들어야 한다
+  - 내 생각이 흔들리는 것이지, 네트워크가 흔들리지 않는다
+
++ 사업을 안하는 이유
+  - 사업설명 1회당 600만원 꼴
+  - 다이아몬드까지 500번까지 되지 않는다
+  - 우리의 월급이 사업설명에 달렸다
+
++ 사업을 하는 이유
+  - 자녀들을 위해서
+  - 나의 시간적 자유
+  - 금전전 자유
+
++ 누구는 성공하고 누구는 실패하는가?
+  - 아이들의 교육은 40세가 된 아이가 어떤모습일까를 걱정하는 것
+  - 자녀교육은 길을 만들어주는 것이 아니라, 길을 갈 수 있도록 가르치는 것
+  - 시간/돈에 자유롭고 싶으면, '다이몬드'라는 결론... 이를 위해 우선순위가 나온다
+    - 결론을 내고 궁리를 내고... 이를 위한 시간과 돈을 소비하라
+  
