--- a/_posts/winners/biz_lecture/2023-08/2023-08-23-암웨이 비지니스 안의 비범함-(한규주 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-23-암웨이 비지니스 안의 비범함-(한규주 리더).md
@@ -4,13 +4,13 @@ title:  "암웨이 비지니스 안의 '비범함' : 한규주 리더"
 categories:
   -  Winners
 tags:
-  - [Amway, Winners]
+  - [Amway, Winners, STP]
 
 toc: true
 toc_sticky: true
 
 date: 2023-08-23
-last_modified_at: 2023-08-28
+last_modified_at: 2023-08-29
 ---
 
 
@@ -19,4 +19,58 @@ last_modified_at: 2023-08-28
 
 ## 암웨이 비지니스 안의 '비범함' / 한규주 리더 (8/23)
 
-+ 
+### 김일두 리더
++ 꾸준하게 하는 일
+  - 좋은 친구들을 만나고 지혜와 슬기를 배웠다
+  - 재정정인 자유를 누려 스스로 돕고 남을 돕게 될 수 있도록
+
++ 기쁨과 희망이 있으면 더위도 멀리할 수 있다
+
+
+### 한규주 리더
++ 더블엑스
+  - 정상적인 식사루틴이 없고, 건강이 최악으로 변화될 때 더블엑스를 통해 좋아짐을 경험하게 됨
+  - 첫 만남의 대한 신뢰가 더블엑스로부터 시작됨
+
++ 생필품 바꿔쓰기 (Use the products)
+  - 제품의 대한 신뢰는 브랜드 체인지로 이어짐
+  - 제품을 바꾸면서 제품에 대한 공부를 하게 되고 어떤 점이 좋은 건지 알게 됨
+  - 소비를 통해 제품을 제대로 배우게 됨 - 제품 감동
+
++ 유통/광고 원리
+  - 제조원가에 불필요한 광고/유통비를 포함한 가격
+  - 암웨이는 이 불필요한 광고/유통비를 소비자에게 돌려주는 사업
+  - 수입의 원천은 광고비 35% - 소비자에게 노력순서로 차등지급
+
++ 이웃의 건강? 피부?
+  - 이웃이 쓰는 생필품 관심 갖기 시작
+  - 누군가에게 관심과 도움이 되는 일
+
++ 사람 관계 이해 시작
+  - 누군가 이해 시키는 지혜
+  - 거절이 아프긴 하지만, 성장점이라 생각하라
+
++ 누군가의 꿈 관심 갖기 시작
+  - 나의 꿈이 누군가의 꿈에 영향 미치기 시작
+  - Win-Win 구조
+  - 내가 누군가에게 좋은 영향을 준다는 것은 신나는 일
+
++ 현실타파
+  - 현실
+    - 금전적인 여유도 없고 빡빡한 현실에 직시
+
++ 평범함 vs 비범함
+  - 나에게 주어진 달란트를 어떻게 활용할 것인가?
+  - 자기 삶에서 다음 단계로 얼마만큼 애쓰고 노력하는가?
+  - 내 삶의 비범함을 끊임없이 도전하느냐에 많은 이들이 혜택을 받을 수 있는 사업
+  - 평범한 사람도 비범한 사람도 모두가 도전할 수 있는 사업
+  - 돈과 인생에서 배울 수 있는 가치를 배울 수 있는 사업
+
++ 꿈 구경 (나의 꿈)
+  - 부제 : 하와이 가족여행
+  - 같은 암웨이를 했지만, 다른 시각의 암웨이를 하고 있음을 느끼게 됨
+  - "나는 사업을 작게만 보고 있었구나.."
+  - 여행을 통해 암웨이 비즈니스를 다시보게 되는 계기가 됨
+
++ 되게 큰 일인데, 내게 왔다!!
+
