--- a/_posts/winners/biz_lecture/2023-08/2023-08-24-TA-OSR-게스트-(최영란 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-24-TA-OSR-게스트-(최영란 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-23
-last_modified_at: 2023-08-24
+last_modified_at: 2023-08-29
 ---
 
 
@@ -19,4 +19,61 @@ last_modified_at: 2023-08-24
 
 ## TA OSR 게스트 / 최영란 리더 (8/24)
 
-+ 
++ 이전에 하던 일
+  - 피아노 선생생님
+  - 피아노를 전공하지 않았지만 피아노를 가르치는 일을 했음
+  - 어릴적 가정형편으로 배우고 싶은 피아노를 포기하고 살았음
+  - 점심시간을 이용해서 피아노를 배우게 됨
+  - 결혼 후 방통대를 가서 '유아교육'을 전공하게 됨
+  - 유아교육 자격증으로 피아노 학원을 하게 됨
+  - 살다보니 내 꿈이 '피아노 선생님'이었던 사실을 잊고 살았다
+  - 생각해보니 더 큰 꿈을 꾸지 못한 내 자신을 보게 됨
+
++ 현실점검
+  - "만약 수입이 끊긴다면..."
+  - 그 대안을 생각해 본적이 없음
+  - 사촌 여동생을 통해 '암웨이'를 알게 됨
+  - 암웨이에 대한 '편견'으로 인해 볼 수 없던 부분을 다시 보게 됨
+
++ 미팅참석
+  - 내가는 건강상식과 다름을 알게 됨
+  - 교만으로 가득찬, 처음 듣는 사업설명... 오히려 오해가 풀리고 교만을 내려놓게 됨
+  - 우연히 시작되는 '건강강의'를 통해 6주간 "다시발견"하게 되는 느낌을 받게 됨
+  - ".... 앞으로도 넌 해야할 일이 있어!"라고 생각
+  - 다시 미팅장소로 가게 됨
+
++ 쉽게 성취한 SP
+  - 스폰서의 힘으로 가게된 SP
+  - 제품의 감동은 없고, 스폰서의 힘으로 성취한 핀에서 느낌이 없음
+  - 얼떨결에 GP... 스폰서가 시키는데로 공부
+  - "한 시간 강의는, 한 문장을 얻기 위함"
+
++ 사업의 성장
+  - F.PT 달성 후, 부모님과 여행
+  - 여행 안에서 부모님에 대한 소중함을 다시 깨닫게 됨
+  - 다시 여행을 결심하고... 스폰서를 따라 하기로 결심함
+  - 물배달 / 스킨케어 / 다이아 마인드 ... 등등 스폰서가 시키는데로 ㄱㄱ
+  - 집안(배우자/딸/친구)에서의 반대... 이것 때문에 오히려 암웨이를 초이스함
+
++ 건강을 만들자
+  - 건강해진 나를 보고 사람들이 물어보게 됨
+
++ EMR & DIA 동시도전
+  - 최선을 다했지만 실패
+  - 상담하고 돌아오면서 울게 됨... 오히려 강의장 가야할 일을 까맣게 잊게 됨
+  - '나'만 보이고, '파트너'가 보이지 않는 부족한 자신을 보게 됨
+  - 나는 '혼자 달리기를 좋아하는 사람'임을 깨닫게 됨
+  - "팀워크의 부실"
+  - 파트너를 만나고 파트너가 원하는것을 끝까지 지원하기로 함
+  - 내가 댑스로 내려가서 노력하니, 파트너들도 아래로 내려가면서 집중하게 됨
+  - 어른이 되어서 '전두엽'이 발전한다. 전두엽에 '꿈/비전'을 넣으면 '광케이블'이 깔린다(?)
+
++ 꿈을 꾸다
+  - "다이아몬드가 되어보자"
+  - 내 노후가 지금보다 더 좋아지도록!
+  - 아이들에게 좋은 엄마의 뒷모습을 보여주고 싶음
+  - 나 같은 엄머들에게 암웨이를 선물해주고 싶었다
+
++ 성장
+  - 한 사람, 한 사람 녹여내서 하나로 만드는 일
+  - 주변의 반대는 우리가 해야내야만 하는 일!
